[tool.poetry]
name = "aiohttp-deps"
description = "Dependency injection for AioHTTP"
authors = ["Taskiq team <taskiq@no-reply.com>"]
maintainers = ["Taskiq team <taskiq@no-reply.com>"]
version = "0.0.0"
readme = "README.md"
license = "LICENSE"
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Development Status :: 3 - Alpha",
]
keywords = ["aiohttp", "taskiq-dependencies"]
homepage = "https://github.com/taskiq-python/aiohttp-deps"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = ">=3.9.0,<4"
taskiq-dependencies = ">=1.5.5,<2"
pydantic = "^2"
deepmerge = "^2"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
mypy = "^1"
pre-commit = "^3"
coverage = "^7"
pytest-cov = "^5.0.0"
mock = "^5"
anyio = "^4"
pytest-xdist = { version = "^3", extras = ["psutil"] }
types-mock = "^5"
black = "^24"
ruff = "^0.6"

[tool.mypy]
strict = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
implicit_reexport = true
warn_return_any = false
warn_unused_ignores = false

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
lint.select = [
    "E",   # Error
    "F",   # Pyflakes
    "W",   # Pycodestyle
    "C90", # McCabe complexity
    "I",   # Isort
    "N",   # pep8-naming
    "D",   # Pydocstyle
    "ANN", # Pytype annotations
    "S",   # Bandit
    "B",   # Bugbear
    "COM", # Commas
    "C4",  # Comprehensions
    "ISC", # Implicit string concat
    "PIE", # Unnecessary code
    "T20", # Catch prints
    "PYI", # validate pyi files
    "Q",   # Checks for quotes
    "RSE", # Checks raise statements
    "RET", # Checks return statements
    "SLF", # Self checks
    "SIM", # Simplificator
    "PTH", # Pathlib checks
    "ERA", # Checks for commented out code
    "PL",  # PyLint checks
    "RUF", # Specific to Ruff checks
]
lint.ignore = [
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line should be in imperative mood
    "D104",    # Missing docstring in public package
    "D100",    # Missing docstring in public module
    "ANN102",  # Missing type annotation for self in method
    "ANN101",  # Missing type annotation for argument
    "ANN401",  # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106",    # Missing docstring in public nested class
    "SLF001",  # Private member accessed

]
exclude = [".venv/"]
lint.mccabe = { max-complexity = 10 }
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert detected
    "S301",   # Use of pickle detected
    "D103",   # Missing docstring in public function
    "SLF001", # Private member accessed
    "S311",   # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "D101",   # Missing docstring in public class
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "taskiq_dependencies.Depends",
    "aiohttp_deps.Depends",
    "aiohttp_deps.Query",
    "aiohttp_deps.Header",
    "aiohttp_deps.Json",
    "aiohttp_deps.Form",
    "aiohttp_deps.Path",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
